@@ -5,11 +5,20 @@
   <groupId>org.cishell.plugins</groupId>
   <version>1.2.0</version>
   <packaging>pom</packaging>
+
+
+  <parent>
+    <groupId>org.cishell</groupId>
+    <artifactId>plugins</artifactId>
+    <version>1.2.0</version>
+    <relativePath>..</relativePath>
+  </parent>
+
   <modules>
     <module>edu.iu.nwb.converter.prefuseisi.tests</module>
     <!-- Below module Fix me -->
-    <!-- <module>edu.iu.nwb.converter.nwbgraphml.tests</module> -->
-    <module>edu.iu.nwb.util.tests</module>
+     <!-- <module>edu.iu.nwb.converter.nwbgraphml.tests</module> -->
+     <!--  <module>edu.iu.nwb.util.tests</module>-->
     <!-- CNS -->
     <module>edu.iu.cns.database.merge.generic.tests</module>
     <module>edu.iu.cns.visualization.tests</module>
@@ -18,68 +27,58 @@
     <module>edu.iu.sci2.visualization.bipartitenet.tests</module>
     <module>edu.iu.sci2.visualization.scimaps.tests</module>
     <module>edu.iu.sci2.database.isi.load.tests</module>
-    <module>edu.iu.sci2.database.isi.load.integration.tests</module>
     <module>edu.iu.sci2.visualization.temporalbargraph.tests</module>
     <module>edu.iu.sci2.medline.test</module>
-    <module>edu.iu.sci2.database.isi.extract.tests</module>
 
+    <!-- INTEGRATION TESTS -FIX ME -->
+    <!-- <module>edu.iu.sci2.database.isi.extract.tests</module> -->
+    <!-- <module>edu.iu.sci2.database.isi.load.integration.tests</module> -->
+    <!--  INTEGRATION TESTS -FIX ME-->
     <module>edu.iu.sci2.testutilities</module>
+
   </modules>
 
-  <properties>
-    <tychoVersion>0.18.1</tychoVersion>
-    <memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
-    <memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
-  </properties>
+
   <build>
     <plugins>
+
       <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-surefire-plugin</artifactId>
-        <version>${tychoVersion}</version>
+        <groupId>biz.aQute.bnd</groupId>
+        <artifactId>bnd-maven-plugin</artifactId>
+        <version>4.0.0</version>
         <configuration>
-          <dependencies>
-            <dependency>
-              <type>eclipse-feature</type>
-              <artifactId>org.cishell.environment.equinox.feature</artifactId>
-              <version>0.0.0</version>
-            </dependency>
-            <dependency>
-              <type>eclipse-feature</type>
-              <artifactId>org.cishell.reference.feature</artifactId>
-              <version>0.0.0</version>
-            </dependency>
-            <dependency>
-              <type>eclipse-feature</type>
-              <artifactId>org.cishell.feature</artifactId>
-              <version>0.0.0</version>
-            </dependency>
-          </dependencies>
-          <bundleStartLevel>
-            <bundle>
-              <id>org.eclipse.equinox.metatype</id>
-              <level>4</level>
-              <autoStart>true</autoStart>
-            </bundle>
-            <bundle>
-              <id>org.cishell.service.autostart</id>
-              <level>4</level>
-              <autoStart>true</autoStart>
-            </bundle>
-            <bundle>
-              <id>org.eclipse.equinox.log</id>
-              <level>4</level>
-              <autoStart>true</autoStart>
-            </bundle>
-          </bundleStartLevel>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <parent>
-    <groupId>org.cishell</groupId>
-    <artifactId>plugins</artifactId>
-    <version>1.2.0</version>
-    <relativePath>..</relativePath>
-  </parent>
-</project>
+          <bnd><![CDATA[
+
+            Bundle-SymbolicName: ${project.groupId}.${project.artifactId}
+            Bundle-Name: ${project.artifactId}
+            Bundle-ClassPath: .
+            Bundle-Localization: plugin
+            Bundle-Version:${project.version}
+
+            ]]></bnd>                     
+          </configuration>
+
+          <executions>
+            <execution>
+              <goals>
+                <goal>bnd-process</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifestFile>src/test/resources/META-INF/MANIFEST.MF</manifestFile>
+            </archive>
+            <skipIfEmpty>true</skipIfEmpty>
+          </configuration>
+        </plugin>
+
+      </plugins>
+    </build>
+  </project>
